set(NAME fb_common)
set(SOURCES
    archive.hpp
    com.hpp
    common.cpp
    common.hpp
    error.cpp
    error.hpp
    file.cpp
    file.hpp
    half.cpp
    half.hpp
    hash.cpp
    hash.hpp
    log.cpp
    log.hpp
    macros.hpp
    math.hpp
    pcg.cpp
    pcg.hpp
    perf.cpp
    perf.hpp
    string.cpp
    string.hpp
    template_helpers.hpp
    time.cpp
    time.hpp
    trap.cpp
    trap.hpp
)
add_library(${NAME} STATIC ${SOURCES})
target_precompile_headers(${NAME} PRIVATE pch.hpp)
target_link_libraries(
    ${NAME}
    PUBLIC
    ${GLM_LIBRARY}
    ${TRACY_LIBRARY}
    PRIVATE
    ${FP16_LIBRARY}
    ${XXHASH_LIBRARY}
)
target_include_directories(
    ${NAME}
    PUBLIC
    ${GLM_INCLUDE_DIR}
    ${TRACY_INCLUDE_DIR}
    ${DIRECTXMATH_INCLUDE_DIR}
    ${DIRECTXTK12_INCLUDE_DIR}
    PRIVATE
    ${CMAKE_SOURCE_DIR}/src
)
