set(NAME fb_common)
set(SOURCES
    archive.hpp
    color.hpp
    com.hpp
    common.cpp
    common.hpp
    error.cpp
    error.hpp
    file.cpp
    file.hpp
    half.cpp
    half.hpp
    hash.cpp
    hash.hpp
    log.cpp
    log.hpp
    macros.hpp
    math.hpp
    pcg.cpp
    pcg.hpp
    pch.cpp
    pch.hpp
    perf.cpp
    perf.hpp
    string.cpp
    string.hpp
    template_helpers.hpp
    time.cpp
    time.hpp
    trap.cpp
    trap.hpp
)
add_library(${NAME} STATIC ${SOURCES})
target_link_libraries(
    ${NAME}
    PUBLIC
    ${GLM_LIBRARY}
    $<$<BOOL:${FB_ENABLE_TRACY}>:${TRACY_LIBRARY}>
    d3d12.lib
    dxgi.lib
    dxguid.lib
    ${DEARIMGUI_LIBRARY}
    ${DXAGILITYSDK_LIBRARY}
    $<$<BOOL:${FB_ENABLE_PIX}>:${WINPIXEVENTRUNTIME_LIBRARY}>
    ${NLOHMANN_JSON_LIBRARY}
    ${GETTIMESINCEPROCESSSTART_LIBRARY}
    PRIVATE
    ${FP16_LIBRARY}
    ${XXHASH_LIBRARY}
)
target_include_directories(
    ${NAME}
    PUBLIC
    ${GLM_INCLUDE_DIR}
    ${GETTIMESINCEPROCESSSTART_INCLUDE_DIR}
    PRIVATE
    ${CMAKE_SOURCE_DIR}/src
)
target_precompile_headers(${NAME} PRIVATE pch.hpp)

fb_setup_visual_studio_directories(${CMAKE_CURRENT_SOURCE_DIR} "${SOURCES}")
