set(NAME fb_kitchen)
set(SOURCES
    kitchen.cpp
    kitchen.hpp
    gpu/buffers.hpp
    gpu/commands.cpp
    gpu/commands.hpp
    gpu/debug.cpp
    gpu/debug.hpp
    gpu/descriptors.cpp
    gpu/descriptors.hpp
    gpu/device.cpp
    gpu/device.hpp
    gpu/formats.cpp
    gpu/formats.hpp
    gpu/gpu.hpp
    gpu/hlsl_cpp.hlsli
    gpu/pipelines.cpp
    gpu/pipelines.hpp
    gpu/samplers.cpp
    gpu/samplers.hlsli
    gpu/samplers.hpp
    gpu/swapchain.cpp
    gpu/swapchain.hpp
    gpu/textures.hpp
    gpu/transfer.cpp
    gpu/transfer.hpp
    kcn/brdf.hlsli
    kcn/camera.cpp
    kcn/camera.hpp
    kcn/core.hlsli
    kcn/debug_draw.cpp
    kcn/debug_draw.hlsli
    kcn/debug_draw.hpp
    kcn/gui.cpp
    kcn/gui.hlsli
    kcn/gui.hpp
    kcn/kcn.hpp
    kcn/multibuffer.hpp
    kcn/render_target.cpp
    kcn/render_target.hpp
    kcn/spd.hlsli
    utils/frame.cpp
    utils/frame.hpp
    win32/window.cpp
    win32/window.hpp
)
add_library(${NAME} STATIC ${SOURCES})
target_precompile_headers(${NAME} REUSE_FROM fb_common)
target_link_libraries(
    ${NAME}
    PUBLIC
    fb_common
    fb_baked
)
target_include_directories(
    ${NAME}
    PUBLIC
    ${CMAKE_SOURCE_DIR}/src
)

fb_setup_visual_studio_directories(${CMAKE_CURRENT_SOURCE_DIR} "${SOURCES}")
